ci: app builds (#3)
* wip: appimage attempt 2

* wip: wip

* fix: protobuf-compiler

* fix: remove appimage-builder

* feat: all platforms

* wip: small ci fixes

* fix: bad feature flag

* feat: ci retry

* feat: progress pane

* fix: typo

* fix: use debug builds all across

* fix: wrong shell

* fix: typo

* fix: bad gradle deps

* wip: not making sense